--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "4.17.1",
     "express-boom": "3.0.0",
     "morgan": "1.9.1",
+    "passport-magic-link": "^2.1.0",
     "pg": "7.18.2",
     "pg-hstore": "2.3.3",
     "sequelize": "5.21.5",
